--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@ h1
 	text-align: center;
 }
 
+span
+{
+	display: block;
+	text-align: center;
+	font-size: 20px;
+}
+
 select
 {
 	margin: 0 auto;
