--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@ img
 	margin: 0px 10px;
 }
 
+input
+{
+	margin-left: 12px;
+	padding: 2px 17px;
+	background-color: rgb(255, 255, 255);
+	border-radius: 10px;
+}
 
 table
 {
